# cobol-dotnet-server

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  code_generation_local.md  pyproject.toml  server.py  system_understanding.md  test.py
alembic/: env.py
alembic/versions/: 034e1c095e45_create_source_files_table.py  ac2c2301dfbb_create_projects_table.py
app/: main.py
app/api/: dependencies.py  exception_handlers.py
app/api/routes/: __init__.py  analyst.py  codegen.py  dependency.py  documentation.py  health.py  parsers.py  pipeline.py  projects.py  rag.py  source_files.py  summarizer.py
app/api/schemas/: codegen.py  common.py  doc_models.py  project.py  source_file.py
app/config/: llm_config.py  logging_config.py  mlflow_config.py  settings.py
app/config/llm/: __init__.py  client.py  embeddings.py  manager.py  models.py  stats.py  token_cache.py  tracing.py
app/core/chunkers/: __init__.py  assembly.py  base.py  ca7.py  cobol.py  copybook.py  document.py  jcl.py  markdown.py  parmlib.py  pdf.py  pli.py  pli_copybook.py  rexx.py
app/core/exceptions/: __init__.py  chunker.py  codegen.py  db_exceptions.py  dependency.py  parser.py  project.py  rag.py  source_file.py  summarizer.py
app/core/parsers/: __init__.py  assembly_parser.py  base.py  bind_parser.py  ca7_parser.py  cobol_parser.py  copybook_parser.py  dclgen_parser.py  flatfile_parser.py  jcl_parser.py  parmlib_parser.py  pli_copybook_parser.py  pli_parser.py  rexx_parser.py
app/core/storage/: __init__.py  base.py  file_storage.py
app/core/tools/: __init__.py  artifact_tools.py  context.py  file_tools.py  rag_tools.py
app/core/utils/: __init__.py  (+1 more)
app/db/: base.py  enums.py
app/services/: documentation.py  parser.py  project.py  rag.py  source_file.py
knowledge/: code_style_guide.md  conversion_guide.md  java_conversion_guide.md  java_style_guide.md  process_flow.md  utility_mappings.json
(+71 files in other folders)
