[project]
name = "cobol-dotnet-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.127.0",
    "loguru>=0.7.3",
    "sqlalchemy>=2.0.45",
]
