[project]
name = "cobol-dotnet-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.17.2",
    "anthropic>=0.75.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.127.0",
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.0",
    "langchain-azure-ai>=1.0.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "loguru>=0.7.3",
    "openai>=2.14.0",
    "sqlalchemy>=2.0.45",
    "tiktoken>=0.12.0",
    "langchain-community>=0.4.1",
    "faiss-cpu>=1.13.2",
    "legacylens-cobol-parser>=0.1.20",
    "pypdf>=6.5.0",
    "mlflow>=3.8.1",
    "ebcdic>=1.1.1",
    "httpx>=0.27.0",
    "networkx>=3.6.1",
    "sentence-transformers>=5.2.0",
    "python-docx>=1.1.2",
    "fpdf2>=2.8.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
